--- a/style.css
+++ b/style.css
@@ -165,15 +165,17 @@ body {
     margin: 20px auto;
     max-width: 1200px;
     padding: 10px;
+    text-align: center;
   }
   .section {
     margin-bottom: 30px;
   }
-  .section h2 {
+  .section h3 {
     text-align: center;
     margin-bottom: 20px;
     color: #333;
   }
+
   .gallery {
     display: flex;
     flex-wrap: wrap;
@@ -235,6 +237,35 @@ body {
         color: #fff;
         transform: scale(1.1);
       }
+
+      .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    
+    .modal-content {
+        margin: auto;
+        display: block;
+        max-width: 90%;
+        max-height: 90%;
+    }
+    
+    .close {
+        position: absolute;
+        top: 20px;
+        right: 35px;
+        color: white;
+        font-size: 40px;
+        font-weight: bold;
+        cursor: pointer;
+    }    
 
 /* Contact Us Form Styling */
 #contact-us {
